--- a/src/app/v1/modules/buscador/buscador.component.html
+++ b/src/app/v1/modules/buscador/buscador.component.html
@@ -5,13 +5,23 @@
       <div class="mb-3">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Buscar {{ displayName.toLowerCase() }}...</mat-label>
-          <input matInput [formControl]="searchControl" placeholder="Buscar {{ displayName.toLowerCase() }}...">
+          <input
+            matInput
+            [formControl]="searchControl"
+            placeholder="Buscar {{ displayName.toLowerCase() }}..."
+          />
         </mat-form-field>
         <div class="form-text text-muted mt-2" *ngIf="hasMinLength">
-          {{ resultados.length }} resultado{{ resultados.length !== 1 ? 's' : '' }} para "{{ searchControl.value }}"
+          {{ resultados.length }} resultado{{
+            resultados.length !== 1 ? "s" : ""
+          }}
+          para "{{ searchControl.value }}"
         </div>
         <div class="text-center my-4" *ngIf="isLoading">
-          <mat-progress-spinner mode="indeterminate" color="primary"></mat-progress-spinner>
+          <mat-progress-spinner
+            mode="indeterminate"
+            color="primary"
+          ></mat-progress-spinner>
         </div>
       </div>
 
@@ -19,29 +29,53 @@
         {{ error }}
       </div>
 
-      <div *ngIf="!isLoading && resultados.length === 0 && hasMinLength" class="alert alert-warning" role="alert">
+      <div
+        *ngIf="!isLoading && resultados.length === 0 && hasMinLength"
+        class="alert alert-warning"
+        role="alert"
+      >
         No se encontraron resultados para "{{ searchControl.value }}"
       </div>
 
       <mat-list>
-        <mat-list-item style="height: auto;padding: 24px;"
-          *ngFor="let articulo of resultados; let i = index" 
+        <mat-list-item
+          style="height: auto; padding: 24px"
+          *ngFor="let articulo of resultados; let i = index"
           class="result-item mb-2 p-4 bg-white border"
           (click)="abrirModal(i)"
         >
           <div class="w-100">
             <h5 class="text-primary font-midiana">{{ articulo.titulo }}</h5>
             <div class="star-rating">
-              <ng-container *ngFor="let star of [].constructor(5); let s = index">
+              <ng-container
+                *ngFor="let star of [].constructor(5); let s = index"
+              >
                 <mat-icon color="warn">
-                  {{ s < mapNivelToStars(articulo.nivel) ? 'star' : 'star_border' }}
+                  {{
+                    s < mapNivelToStars(articulo.nivel) ? "star" : "star_border"
+                  }}
                 </mat-icon>
               </ng-container>
             </div>
-            <span class="text-muted highlight" *ngIf="articulo.idioma === 'ingles'">En inglés</span>
-            <span class="text-muted highlight" *ngIf="articulo.articulo_paper === 'paper'">Paper</span>
-            <p class="text-muted summary mt-2 text-sm">{{ articulo.resumen }}</p>
-            <small class="text-secondary">Sitio web: {{ obtenerDominio(articulo.link) }} | {{ convertToDate(articulo.fecha_publicacion).getFullYear() }}</small>
+            <span
+              class="text-muted highlight"
+              *ngIf="articulo.idioma === 'ingles'"
+              >En inglés</span
+            >
+            <span
+              class="text-muted highlight"
+              *ngIf="articulo.articulo_paper === 'paper'"
+              >Paper</span
+            >
+            <p class="text-muted summary mt-2 text-sm">
+              {{ articulo.resumen }}
+            </p>
+            <small class="text-secondary"
+              >Sitio web: {{ obtenerDominio(articulo.link) }} |
+              {{
+                convertToDate(articulo.fecha_publicacion).getFullYear()
+              }}</small
+            >
           </div>
         </mat-list-item>
       </mat-list>
