--- a/src/app/shared/styles/styles.scss
+++ b/src/app/shared/styles/styles.scss
@@ -1,21 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
-/* Import Theme Files */
-@import '@styles/light-theme.scss';
-@import '@styles/dark-theme.scss';
-
-/* Global Styles */
-html, body {
-  height: 100%;
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
 
 /* Default Theme */
 :root {
   @extend .light-theme;
 }
 
-/* Additional global styles can go here */
+/* Import Theme Files */
+@import "@styles/light-theme.scss";
+@import "@styles/dark-theme.scss";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* Tailwind CSS Directives */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
