--- a/src/app/v2/components/navbar/navbar.component.html
+++ b/src/app/v2/components/navbar/navbar.component.html
@@ -120,28 +120,28 @@
           class="absolute left-0 top-full w-48 bg-gray-800 text-white rounded-md shadow-lg opacity-0 invisible pointer-events-none group-hover:opacity-100 group-hover:visible group-hover:pointer-events-auto transition-opacity duration-300 z-10"
         >
           <a
-            href="/buscadores/proveedores"
-            key="/buscadores/proveedores"
+            href="/buscador-proveedores"
+            key="/buscador-proveedores"
             class="block px-4 py-2 hover:bg-gray-700"
             >Proveedores</a
           ><a
-            href="/buscadores/cursos"
-            key="/buscadores/cursos"
+            href="/buscador-cursos"
+            key="/buscador-cursos"
             class="block px-4 py-2 hover:bg-gray-700"
             >Cursos</a
           ><a
-            href="/buscadores/financiamiento"
-            key="/buscadores/financiamiento"
+            href="/buscador-financiamiento"
+            key="/buscador-financiamiento"
             class="block px-4 py-2 hover:bg-gray-700"
             >Financiamiento</a
           ><a
-            href="/buscadores/articulos"
-            key="/buscadores/articulos"
+            href="/buscador-articulos"
+            key="/buscador-articulos"
             class="block px-4 py-2 hover:bg-gray-700"
             >Artículos de Interés</a
           ><a
-            href="/buscadores/proyectos-destacados"
-            key="/buscadores/proyectos-destacados"
+            href="/buscador-proyectos"
+            key="/buscador-proyectos"
             class="block px-4 py-2 hover:bg-gray-700"
             >Proyectos Destacados</a
           >
