--- a/src/app/v2/modules/course-search/course-search.component.html
+++ b/src/app/v2/modules/course-search/course-search.component.html
@@ -165,7 +165,7 @@
       <span class="me-2">Buscar:</span>
       <span
         style="background-color: rgb(55 65 81); padding: 4px 12px"
-        class="badge bg-primary text-white suggested-term me-2 mb-2"
+        class="badge bg-primary text-white suggested-term me-2 mb-2 text-xs"
         *ngFor="
           let term of ['online', 'presencial', 'gratuito', 'de pago', 'ingles']
         "
