--- a/src/app/v2/modules/article-search/article-search.component.html
+++ b/src/app/v2/modules/article-search/article-search.component.html
@@ -32,7 +32,7 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            href="/buscadores"
+            href="/"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
             Buscadores
@@ -53,10 +53,10 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            href="/buscadores/cursos"
+            href="/buscador-articulos"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
-            Cursos
+            Artículos
           </a>
         </li>
       </ol>
