--- a/src/app/v2/modules/provider-search/provider-search.component.html
+++ b/src/app/v2/modules/provider-search/provider-search.component.html
@@ -32,7 +32,7 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            href="/buscadores"
+            href="/"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
             Buscadores
@@ -53,10 +53,10 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            href="/buscadores/cursos"
+            href="/buscador-proveedores"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
-            Cursos
+            Proveedores
           </a>
         </li>
       </ol>
@@ -67,7 +67,7 @@
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Search and Results -->
   <div class="w-full lg:w-3/4 pr-8">
-    <h2 class="text-2xl font-bold mb-6">Cursos</h2>
+    <h2 class="text-2xl font-bold mb-6">Proveedores</h2>
     <!-- Formulario de búsqueda -->
     <form class="flex items-center mb-8">
       <label for="simple-search" class="sr-only">Buscar</label>
@@ -92,7 +92,7 @@
         <input
           type="text"
           id="simple-search"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-text-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5"
           placeholder="Buscar ..."
           required
         />
