--- a/src/app/v2/modules/login/login.component.html
+++ b/src/app/v2/modules/login/login.component.html
@@ -1,1 +1,104 @@
-<p>login works!</p>
+<!-- login.component.html -->
+<div class="flex items-center justify-center min-h-screen bg-dark">
+  <div class="bg-white rounded-lg shadow-lg p-8 w-full max-w-md">
+    <div class="text-center mb-6">
+      <!-- Logo y Nombre de la Empresa -->
+      <h2 class="text-2xl font-bold text-dark">NuevoLosLagos</h2>
+    </div>
+
+    <!-- Formulario -->
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="space-y-6">
+      <!-- Campo de Correo -->
+      <div>
+        <label for="email" class="block text-sm font-medium text-dark"
+          >Correo</label
+        >
+        <input
+          id="email"
+          type="email"
+          formControlName="email"
+          required
+          class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary"
+          placeholder="Ingresa tu correo electrónico"
+        />
+        <div
+          *ngIf="
+            loginForm.get('email')?.touched && loginForm.get('email')?.invalid
+          "
+          class="mt-2 text-sm text-red-600"
+        >
+          <div *ngIf="loginForm.get('email')?.errors?.['required']">
+            El correo es obligatorio.
+          </div>
+          <div *ngIf="loginForm.get('email')?.errors?.['email']">
+            Por favor, ingresa un correo válido.
+          </div>
+        </div>
+      </div>
+
+      <!-- Campo de Contraseña -->
+      <div>
+        <label for="password" class="block text-sm font-medium text-dark"
+          >Contraseña</label
+        >
+        <input
+          id="password"
+          type="password"
+          formControlName="password"
+          required
+          class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary"
+          placeholder="Ingresa tu contraseña"
+        />
+        <div
+          *ngIf="
+            loginForm.get('password')?.touched &&
+            loginForm.get('password')?.invalid
+          "
+          class="mt-2 text-sm text-red-600"
+        >
+          <div *ngIf="loginForm.get('password')?.errors?.['required']">
+            La contraseña es obligatoria.
+          </div>
+        </div>
+      </div>
+
+      <!-- Mensaje de Error -->
+      <div *ngIf="errorMessage" class="text-center text-sm text-red-600">
+        {{ errorMessage }}
+      </div>
+
+      <!-- Botones -->
+      <div class="flex flex-col space-y-4">
+        <!-- Botón de Acceso -->
+        <button
+          type="submit"
+          [disabled]="isLoading"
+          class="flex items-center bg-yellow-600 justify-center px-4 py-2 bg-primary text-white rounded-md hover:bg-gray-800 transition duration-300"
+        >
+          Acceder
+        </button>
+
+        <hr class="my-4 border-t border-gray-300 w-3/4 mx-auto" />
+
+        <!-- Botón de Crear Cuenta -->
+        <a
+          routerLink="/registro"
+          class="flex items-center bg-gray-800 justify-center px-4 py-2 bg-primary text-white rounded-md hover:bg-yellow-600 transition duration-300"
+        >
+          Crear Cuenta
+        </a>
+
+        <!-- Botón de Volver -->
+        <a
+          routerLink="/"
+          class="flex items-center bg-white-800 justify-center px-4 py-2 border border-gray-300 text-gray-900 rounded-md hover:bg-gray-100 transition duration-300"
+        >
+          Volver
+        </a>
+      </div>
+
+      <!-- Spinner de Carga -->
+      <div *ngIf="isLoading" class="flex justify-center mt-4"></div>
+    </form>
+  </div>
+</div>
