--- a/src/app/v2/modules/landing-page/landing-page.component.html
+++ b/src/app/v2/modules/landing-page/landing-page.component.html
@@ -39,7 +39,7 @@
         acciones debes realizar para alcanzar la madurez tecnológica
       </p>
       <a
-        href="#"
+        routerLink="/evaluaciones-madurez"
         class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center rounded-lg bg-primary hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 border border-yellow-500 border-3 hover:border-yellow-600 hover:bg-yellow-500"
       >
         Evaluar Ahora
@@ -68,7 +68,7 @@
       class="grid gap-x-8 gap-y-12 sm:gap-y-16 md:grid-cols-2 lg:grid-cols-3"
     >
       <div class="relative mt-5 bg-gray-100 p-6">
-        <a href="#" class="block mb-3">
+        <a routerLink="/registro-industria" class="block mb-3">
           <h2 class="text-2xl font-bold leading-5 text-black">
             Registro Empresas
           </h2>
@@ -77,10 +77,12 @@
           ¿Formas parte de la Industria 4.0 y necesitas formación o proveedores
           para tu negocio?
         </p>
-        <a href="#" class="font-medium text-purple-600"> Registrarse </a>
+        <a routerLink="/registro-industria" class="font-medium text-purple-600">
+          Registrarse
+        </a>
       </div>
       <div class="relative mt-5 bg-gray-100 p-6">
-        <a href="#" class="block mb-3">
+        <a routerLink="/registro-proveedor" class="block mb-3">
           <h2 class="text-2xl font-bold leading-5 text-black">
             Registro Proveedores
           </h2>
@@ -89,10 +91,12 @@
           ¿Quieres unirte a nuestra plataforma como proveedor de productos o
           servicios para la Industria 4.0?
         </p>
-        <a href="#" class="font-medium text-purple-600"> Registrarse </a>
+        <a routerLink="/registro-proveedor" class="font-medium text-purple-600">
+          Registrarse
+        </a>
       </div>
       <div class="relative mt-5 bg-gray-100 p-6">
-        <a href="#" class="block mb-3">
+        <a routerLink="/registro-persona" class="block mb-3">
           <h2 class="text-2xl font-bold leading-5 text-black">
             Registro Usuarios
           </h2>
@@ -101,7 +105,9 @@
           ¿Te interesa conocer tendencias, innovaciones y mejores prácticas en
           la Industria 4.0, sin ser empresa o proveedor?
         </p>
-        <a href="#" class="font-medium text-purple-600"> Registrarse </a>
+        <a routerLink="/registro-persona" class="font-medium text-purple-600">
+          Registrarse
+        </a>
       </div>
     </div>
   </div>
@@ -117,7 +123,7 @@
           Podcast creados con IA, acerca de la industria 4.0 y sus tecnologías.
         </p>
         <a
-          href="#"
+          href="/investigacion-podcasts"
           class="bg-gray-800 text-white py-3 px-6 rounded-lg shadow-lg hover:shadow-xl transition duration-200"
           >Ir a Escuchar
         </a>
