--- a/src/app/v2/modules/proyecto-plataforma/proyecto-plataforma.component.html
+++ b/src/app/v2/modules/proyecto-plataforma/proyecto-plataforma.component.html
@@ -65,7 +65,7 @@
 </div>
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Sección de búsqueda y resultados -->
-  <div class="w-full lg:w-3/4 pr-8">
+  <div class="w-full lg:w-3/4 pr8 p-8">
     <h2 class="text-3xl font-bold mb-5">Plataforma</h2>
     <!-- Espacio para contenido dinámico -->
     <section class="my-8 text-justify bg-gray-100 p-3">
