--- a/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
+++ b/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
@@ -1,1 +1,72 @@
 <p>evaluaciones-madurez works!</p>
+<p>authState:{{ authState() }}</p>
+<p>currentUser:{{ currentUser()?.rol?.nombreRol }}</p>
+<!--Login -->
+@if (authState()===AuthState.LoggedIn && currentUser()?.rol?.nombreRol ===
+Role.Empresa && modeloMadurez()) {
+<p>tipo empresa con modelo</p>
+}
+<!--Login-->
+
+@if (authState() === AuthState.LoggedIn && currentUser()?.rol?.nombreRol ===
+Role.Empresa && !modeloMadurez()) {
+<p>tipo empresa sin modelo</p>
+}
+<div className="max-w-7xl mx-auto px-4 py-8">
+  <h1 className="text-4xl font-bold text-gray-700 mb-8">
+    NOMBRE DE LA EMPRESA
+  </h1>
+
+  <div className="grid grid-cols-1 lg:grid-cols-3 gap-8">
+    <div className="lg:col-span-2">
+      <div className="mb-8">
+        <h2 className="text-2xl text-gray-600 mb-4">Estado evaluaciones</h2>
+        <p className="text-gray-500 mb-6">
+          Lorem Epson Lorem Epson Lorem EpsonLorem EpsonLorem EpsonLorem
+          EpsonLorem EpsonLorem EpsonLorem EpsonLorem EpsonLorem Epso
+        </p>
+
+        <div className="flex flex-wrap gap-4">
+          <button
+            className="px-6 py-2 bg-[#E9C46A] text-gray-700 rounded hover:bg-[#E9C46A]/90 transition"
+          >
+            Estado encuesta 1
+          </button>
+          <button
+            className="px-6 py-2 bg-[#E9C46A] text-gray-700 rounded hover:bg-[#E9C46A]/90 transition"
+          >
+            Estado encuesta 2
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div className="lg:col-span-1">
+      <button
+        className="w-full p-8 bg-[#E9C46A] text-gray-700 rounded-lg hover:bg-[#E9C46A]/90 transition text-xl"
+      >
+        Realizar encuesta
+      </button>
+    </div>
+  </div>
+
+  <div className="mt-8">
+    <div className="bg-[#D1E0DB] py-3 px-4 mb-8">
+      <h2 className="text-2xl text-gray-600">Resultado madurez</h2>
+    </div>
+
+    <div className="grid grid-cols-1 lg:grid-cols-2 gap-8">
+      <div className="w-full h-[400px]"></div>
+
+      <div className="space-y-6">
+        <div key="{index}" className="space-y-2">
+          <h3 className="text-xl font-bold text-gray-700">CAPITAL HUMANO:</h3>
+          <p className="text-gray-600">
+            Lorem Epson Lorem Epson Lorem EpsonLorem EpsonLorem EpsonLorem
+            EpsonLorem EpsonLorem EpsonLorem EpsonLorem EpsonLorem Epso
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
