--- a/src/app/v2/modules/provider-search/provider-search.component.html
+++ b/src/app/v2/modules/provider-search/provider-search.component.html
@@ -66,7 +66,7 @@
 <!-- Contenido dinámico -->
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Search and Results -->
-  <div class="w-full lg:w-3/4 pr-8">
+  <div class="w-full lg:w-3/4 pr8 p-8">
     <h2 class="text-2xl font-bold mb-6">Proveedores</h2>
     <!-- Formulario de búsqueda -->
     <form class="flex items-center mb-8">
