--- a/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
+++ b/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
@@ -66,7 +66,7 @@
 <!-- Contenido principal -->
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Sección de búsqueda y resultados -->
-  <div class="w-full lg:w-3/4 pr-8">
+  <div class="w-full lg:w-3/4 pr8 p-8">
     <h2 class="text-3xl font-bold mb-5">Nuestro Equipo</h2>
     <!-- Espacio para contenido dinámico -->
     <section id="our-team" class="">
