--- a/src/app/v2/modules/podcasts/podcasts.component.html
+++ b/src/app/v2/modules/podcasts/podcasts.component.html
@@ -67,12 +67,11 @@
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Sección de búsqueda y resultados -->
   <div class="w-full lg:w-3/4 pr8 p-8">
-    <h2 class="text-3xl font-bold mb-5">Podcasts</h2>
     <!-- Espacio para contenido dinámico -->
     <section class="my-8 text-justify p-3">
       <!--body-->
       <mat-card class="podcasts-container">
-        <mat-card-header class="header-container">
+        <mat-card-header style="text-align: left" class="header-container">
           <mat-card-title class="title"
             >IA Podcasts de Nuevo Los Lagos</mat-card-title
           >
