update lunes 25nov

--- a/src/app/v2/components/navbar/navbar.component.html
+++ b/src/app/v2/components/navbar/navbar.component.html
@@ -98,7 +98,7 @@
             href="/evaluaciones-startup"
             class="block px-4 py-2 hover:bg-gray-700"
           >
-            Startup
+            Startup y Emprendimiento
           </a>
         </div>
       </div>
@@ -333,7 +333,7 @@
             class="block px-3 py-2 rounded-md text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-300"
             (click)="closeMobileMenu()"
           >
-            Startup
+            Startup y Emprendimiento
           </a>
         </div>
       </div>
